# pdf

./: CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  deploy.sh
.github/workflows/: ci.yml
src/: error.rs  info.rs  main.rs  page_range.rs  pdfium_init.rs  render.rs  render_worker.rs
tests/: large_xref_stream.rs
