[package]
name = "pdf"
version = "0.1.0"
edition = "2024"

[features]
default = []
vips = ["dep:libvips"]

[dependencies]
pdfium-render = { version = "0.8", default-features = false, features = ["image", "pdfium_7350", "thread_safe"] }
image = { version = "0.25", features = ["jpeg"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
libvips = { version = "1", optional = true }
